...
            "There are many useful resources while learning Flutter, such as : \n\n- Official documentation. You should definitely start there !\n- Udemy courses\n- YouTube channels\n- Newsletters"
      }
    ]
  },
  {
    "id": "flutter-setup",
    "name": "Flutter setup",
    "pages": [
      {
        "name": "Install Flutter SDK",
        "content":
            "The official documentation is really well written and will guide you towards installing Flutter for your operating system. In particular you can install Flutter on the following platforms: \n\n- Windows\n- MacOS\n- Linux\n- Chrome OS\n\nMore info at https://docs.flutter.dev/get-started/install"
      },
      {
        "name": "Install target platform SDK",
        "content":
            "Once you have an installed Flutter SDK you might need to install additional platform SDK depending on the platform you are targeting. For example you usually don't need to install anything if you are only targeting web support but you might need to install components if you are targeting either Android, iOS or MacOS as apps platforms."
      },
      {
        "name": "Mac with M1 chip",
        "content":
...
            "DevTools is a suite of performance and debugging tools for Dart and Flutter.\n\nHere are some of the things you can do with DevTools:\n\n- Inspect the UI layout and state of a Flutter app.\n- Diagnose UI jank performance issues in a Flutter app.\n- CPU profiling for a Flutter or Dart app.\n- Network profiling for a Flutter app.\n- Source-level debugging of a Flutter or Dart app.\n- De
      }
    ]
  },
  {
    "id": "state_management",
    "name": "State management",
    "pages": [
      {
        "name": "Stateless widget",
        "content":
            "A widget is either stateful or stateless. If a widget can change — when a user interacts with it, for example — it’s stateful.\n\nA stateless widget never changes. Icon, IconButton, and Text are examples of stateless widgets. Stateless widgets subclass StatelessWidget."
      },
...
            "Modern Android & iOS smartphones now allow choosing beetween a light and a dark theme for everything system related. This is great, and the good news is that Flutter offers a very easy way to provide both themes in your app, the Flutter framework will then handle for you the theme switch when the theme mode changes. To do so just provide both theme in MaterialApp: \n\nreturn MaterialA
      }
    ]
  },
  {
    "id": "navigation",
    "name": "Navigation",
    "pages": [
      {"name": "Navigator.of(context)", "content": "Navigate between pages"}
    ]
  },
  {
    "id": "data_exchange",
...
