...
            : Center(
                child: Text(context.translations.course.details.doesnt_exist),
              ),
      ),
      floatingActionButton: isLastPage
          ? FloatingActionButton(
              key: const Key('terminate-course-fab'),
              onPressed: () {
                context.read<CourseProgressBloc>().add(
                      CourseProgressEvent.updateProgress(
                        widget.course.id,
                        currentPage,
                        isOver: true,
...
